# linked-list

./: .gitattributes  .gitignore  Makefile  pyproject.toml
.github/: tests.yml
.github/workflows/: tests.yml
src/: LinkedList.py  Node.py
src/core/: LinkedList.py
tests/: conftest.py
tests/tests_linked_list/: tests_linked_list.py
tests/tests_node/: tests_empty_node.py
